--- a/eShop.Data/eShop.Data.csproj
+++ b/eShop.Data/eShop.Data.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20211008133622_Add_CategoryTranslation_into_Category.cs" />
+    <Compile Remove="Migrations\20211008133622_Add_CategoryTranslation_into_Category.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
